<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
            <item
                android:id="@+id/mainPage"
                android:checked="true"
                android:icon="@drawable/icon"
                android:title="@string/mainPage"/>
            <item
                android:id="@+id/myFavorites"
                android:icon="@drawable/icon"
                android:title="@string/myFavorites"/>
            <item
                android:id="@+id/overview"
                android:icon="@drawable/icon"
                android:title="@string/overview"/>
            <item
                android:id="@+id/map"
                android:icon="@drawable/icon"
                android:title="@string/map"/>
            <item
                android:id="@+id/nearby"
                android:checked="true"
                android:icon="@drawable/icon"
                android:title="@string/nearby"/>
            <item
                android:id="@+id/setting"
                android:checked="true"
                android:icon="@drawable/icon"
                android:title="@string/setting"/>
            <item
                android:id="@+id/exit"
                android:checked="true"
                android:icon="@drawable/icon"
                android:title="@string/exit"/>
            <item
                android:id="@+id/signOut"
                android:checked="true"
                android:icon="@drawable/icon"
                android:title="@string/signOut"/>
            <item
                android:id="@+id/signIn"
                android:icon="@drawable/icon"
                android:title="@string/signIn"/>
    </group>
</menu>